--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <div class="iframe-container">
         <iframe src="/memorygame/index.html" title="Memory Game></iframe>
+	</div>
+    <div class="iframe-container">
         <iframe src="/wackamole/index.html" title="Wack A Mole"></iframe>
     </div>
 </body>
