--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <div class="iframe-container">
-        <iframe src="/memorygame/index.html" title="Memory Game></iframe>
-        <iframe src="/wackamole/index.html" title="Memory Game></iframe>
+        <iframe src="/memorygame/index.html" title="Game 1"></iframe>
+        <iframe src="/wackamole/index.html" title="Game 2"></iframe>
     </div>
 </body>
 </html>
+
