--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="iframe-container">
         <iframe src="/memorygame/index.html" title="Game 1"></iframe>
         <iframe src="/wackamole/index.html" title="Game 2"></iframe>
+        <iframe src="/tictactoe/index.html" title="Game 2"></iframe>
     </div>
 </body>
 </html>
