--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 </head>
 <body>
     <div class="iframe-container">
-        <iframe src="/memorygame/index.html" title="Game 1"></iframe>
-        <iframe src="/wackamole/index.html" title="Game 2"></iframe>
+        <iframe src="/memorygame/index.html" title="Game 1"></iframe> </div>
+            <div class="iframe-container">
+
+        <iframe src="/wackamole/index.html" title="Game 2"></iframe> </div>
+            <div class="iframe-container">
+
         <iframe src="/tictactoe/index.html" title="Game 3"></iframe>
     </div>
 </body>
