--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div class="iframe-container">
-        <iframe src="/memorygame/index.html" title="Game 1"></iframe>
+        <iframe src="/memorygame/index.html" class="iframe" title="Game 1"></iframe>
 
-        <iframe src="/wackamole/index.html" title="Game 2"></iframe>
+        <iframe src="/wackamole/index.html" class="iframe" title="Game 2"></iframe>
 
-        <iframe src="/tictactoe/index.html" title="Game 3"></iframe>
+        <iframe src="/tictactoe/index.html" class="iframe" title="Game 3"></iframe>
     </div>
 </body>
 </html>
